--- a/BinWatch/BinWatch/Base.lproj/Main.storyboard
+++ b/BinWatch/BinWatch/Base.lproj/Main.storyboard
@@ -392,7 +392,7 @@
             </objects>
             <point key="canvasLocation" x="1218" y="2153"/>
         </scene>
-        <!--Bin Locator View Controller-->
+        <!--Bin Locator-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="BWBinLocatorViewController" sceneMemberID="viewController">
@@ -404,8 +404,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oOS-ux-UM2">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="oOS-ux-UM2">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="3n3-kf-uch"/>
                                 </constraints>
@@ -422,7 +422,7 @@
                             <constraint firstItem="oOS-ux-UM2" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" id="TwO-j7-isb"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Acw-xF-dRo"/>
+                    <navigationItem key="navigationItem" title="Bin Locator" id="Acw-xF-dRo"/>
                     <connections>
                         <outlet property="mapSearchBar" destination="oOS-ux-UM2" id="wIq-nR-sBc"/>
                         <outlet property="searchDisplayController" destination="KhX-hY-vXe" id="TqD-VS-pLn"/>
