--- a/BinWatch/BWDatePickerView.xib
+++ b/BinWatch/BWDatePickerView.xib
@@ -18,17 +18,20 @@
                     </constraints>
                     <items>
                         <barButtonItem title="Done" id="3sC-xF-d37">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="donePressed:" destination="iN0-l3-epB" id="62F-KJ-qEZ"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="pz7-EK-zub"/>
                         <barButtonItem title="Cancel" id="nJ1-0H-bBk">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="cancelPressed:" destination="iN0-l3-epB" id="mhy-Er-qI2"/>
                             </connections>
                         </barButtonItem>
                     </items>
+                    <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </toolbar>
                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="4sp-t3-KrY">
                     <rect key="frame" x="0.0" y="46.5" width="600" height="180"/>
